syntax = "proto3";

package protocol;

message WsWelcome {
  uint32 alias = 1;
  map<uint32, string> peer_identities = 2;
}

message WsPeerJoin {
  uint32 alias = 1;
  string identity = 2;
}

message WsPeerUpdate {
  uint32 from_alias = 1;
  bytes body = 2;
}

message WsPacket {
  oneof message {
    WsWelcome welcome_message = 1;
    WsPeerJoin peer_join_message = 2;
    WsPeerUpdate peer_update_message = 3;
  }
}
